[CoverSpacing] Fix cover spacing

--- a/src/app/components/track-list/track-list-item/track-list-item.component.scss
+++ b/src/app/components/track-list/track-list-item/track-list-item.component.scss
@@ -39,11 +39,11 @@
 }
 
 .cover-img {
-  max-width: 60px;
-  max-height: 60px;
+  max-width: 45px;
+  max-height: 45px;
   width: 100%;
-  min-height: 50px;
-  min-width: 50px;
+  min-height: 45px;
+  min-width: 45px;
   align: left;
 }
 
